# civctp2

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  1_1readme.txt  Activision CTP2 Source Code_Readme.htm  Activision CTP2 Source Code_Readme.txt  Apolyton CTP2 Source Code_Readme.txt  BUGS  CONTRIBUTING.md  CTP2 Source Code_Readme.txt  Dockerfile  EULA - Source Code for CTP2.rtf  GL-CI.md  GNUmakefile.am  LICENSE.md  MakeAndRun.sh  Makefile  README.md  README.txt  Run.sh  anet.inf  autogen.sh  configure.ac  configure.in  docker_build.sh  force_fail.sh  net.apolyton.civctp2.yaml  run.sh  show_docker_libtool_version.sh  show_system_libtool_version.sh
ctp2_code/: .clang-format  .gitattributes  Makefile.am  meson.build  meson_options.txt
ctp2_code/GameWatch/: GameWatch.dsw
ctp2_code/GameWatch/gamewatch/: DLLTypes.h  GWDelivery.cpp  GWDelivery.h  GWRecord.cpp  GWRecord.h  GWRecorder.cpp  GWRecorder.h  GameWatch.cpp  GameWatch.h  gamewatch.dsp
ctp2_code/GameWatch/gwarchive/: GWArchive.cpp  GWArchive.h  GWArchiveDLL.h  gwarchive.dsp  main.cpp
ctp2_code/GameWatch/gwciv/: GWCiv.cpp  GWCiv.h  GWCivDLL.h  GWCivRecord.cpp  GWCivRecord.h  gwciv.dsp
ctp2_code/GameWatch/gwfile/: GWFile.cpp  GWFile.h  GWFileDLL.h  gwfile.dsp
ctp2_code/ai/: ctpai.cpp  ctpai.h  ctpaidebug.cpp  ctpaidebug.h  list-fixed  profileai.h
ctp2_code/ai/CityManagement/: governor.cpp  governor.h
ctp2_code/ai/ctp2/: ctp2.h  ctp_debug.h  ctp_types.h  ldl_strings.h
ctp2_code/ai/diplomacy/: AgreementMatrix.h  CounterResponseEvent.h  DStateEvent.h  Diplomat.h  Foreigner.h  MotivationEvent.h  NProposalEvent.h  ProposalAnalysis.h  ProposalResponseEvent.h  ReactEvent.cpp  RegardEvent.h  RejectResponseEvent.cpp  RejectResponseEvent.h  ResponseEvent.cpp  ResponseEvent.h  SStateEvent.h  ThreatResponseEvent.h  agreementmatrix.cpp  counterresponseevent.cpp  diplomacyutil.cpp  diplomacyutil.h  diplomat.cpp  diplomattypes.cpp  diplomattypes.h  dstateevent.cpp  foreigner.cpp  motivationevent.cpp  nproposalevent.cpp  proposalanalysis.cpp  proposalresponseevent.cpp  reactevent.h  regardevent.cpp  sstateevent.cpp  threatresponseevent.cpp
ctp2_code/ai/diplomacy_test/: diplomacy_test.dsw
ctp2_code/ai/mapanalysis/: boundingrect.cpp  boundingrect.h  mapanalysis.cpp  mapanalysis.h  mapgrid.h  settlemap.cpp  settlemap.h
ctp2_code/ai/personality/: aip2.h
ctp2_code/compiler/msvc8/: dbgen.rules  lex.rules  yacc.rules
ctp2_code/ctp/: Makefile.am  anet.inf  anet2.map  anet2d.map  appstr.txt  bootserv.txt  c3.cpp  c3.h  c3types.h  cifm.cpp  cifm.h  civ3_main.cpp  civ3_main.h  civapp.cpp  civapp.h  civctp.dsp  civctp.dsw  civctp.sln  civctp.vcxproj  civctp.vcxproj.filters  civctp_j.dsp  civpaths.txt  ctp2_enums.h  dipcombo.txt  disclaimer.txt  display.cpp  display.h  nguid.ctp  scheduler_profile.bat  slicdbg.txt  userkeymap.txt
ctp2_code/ctp/ARM64/: civpaths.txt
ctp2_code/ctp/ctp2_rsrc/: civ3.rc  resource.h
ctp2_code/ctp/ctp2_utils/: AvlTree.h  BitMask.h  appstrings.cpp  appstrings.h  c3cmdline.cpp  c3cmdline.h  c3cpu.cpp  c3cpu.h  c3debug.cpp  c3debug.h  c3debugstl.h  c3errors.cpp  c3errors.h  c3files.cpp  c3files.h  c3math.h  c3mem.cpp  cheatkey.cpp  cheatkey.h  command.cpp  command.h  ctpregistry.cpp  ctpregistry.h  ddhelp.cpp  ddhelp.h  minmax.h  netconsole.cpp  netconsole.h  pointerlist.h  tracklen.cpp  tracklen.h
ctp2_code/ctp/debugtools/: Makefile.win  Timer.cpp  Timer.dev  Timer.h  breakpoint.h  debug.c  debug.h  debugassert.cpp  debugassert.h  debugcallstack.cpp  debugcallstack.h  debugexception.cpp  debugexception.h  debugmemory.cpp  debugmemory.h  log.cpp  log.h  log_off.h  log_on.h  main.cpp
ctp2_code/ctp/fingerprint/: ctp_finger.cpp  ctp_finger.h  endecode.c  shroud.c  shroud.h  verify.c  verify.h
ctp2_code/ctp/x64/: civpaths.txt
ctp2_code/doc/dev/: Makefile  ctp2_dev.tex
ctp2_code/gfx/: Makefile.am  gfx.dsp
ctp2_code/gfx/gfx_utils/: ColorSet.cpp  Makefile.am  Queue.h  arproces.cpp  arproces.h  colorset.h  gfx_options.cpp  gfx_options.h  pixeltypes.h  pixelutils.cpp  pixelutils.h  rimutils.h  targautils.cpp  targautils.h  tiffutils.cpp  tiffutils.h  videoutils.cpp  videoutils.h
ctp2_code/gfx/layers/: Makefile.am  citylayer.cpp  citylayer.h
ctp2_code/gfx/spritesys/: Action.h  ActionQueue.cpp  ActionQueue.h  Actor.cpp  Actor.h  ActorPath.cpp  ActorPath.h  Anim.cpp  Anim.h  CitySpriteGroup.cpp  CitySpriteGroup.h  DirectorActionHandlers.cpp  DirectorActionHandlers.h  DirectorActions.cpp  EffectActor.cpp  EffectActor.h  EffectSpriteGroup.h  FacedSprite.cpp  FacedSprite.h  FacedSpriteWshadow.cpp  FacedSpriteWshadow.h  GoodActor.cpp  GoodActor.h  GoodSpriteGroup.cpp  GoodSpriteGroup.h  Makefile.am  ProjectileActor.cpp  ProjectileActor.h  ProjectileSpriteGroup.cpp  ProjectileSpriteGroup.h  Sequence.cpp  Sequence.h  Sprite.cpp  Sprite.h  SpriteFile.h  SpriteGroup.cpp  SpriteGroup.h  SpriteGroupList.cpp  SpriteGroupList.h  SpriteHitTest.cpp  (+33 more)
ctp2_code/gfx/tilesys/: BaseTile.cpp  BaseTile.h  Makefile.am  TileDrawRoad.h  TileHighlight.cpp  TileInfo.cpp  TileInfo.h  maputils.cpp  maputils.h  resourcemap.cpp  resourcemap.h  tiledmap.cpp  tiledmap.h  tiledraw.cpp  tileset.h  (+6 more)
ctp2_code/gs/: Makefile.am  gs.dsp
ctp2_code/libs/: .gitattributes  Makefile.am
ctp2_code/mapgen/: Crater.cpp  Crater.def  Crater.dsp  Crater.h  Crater.vcxproj  FaultGen.cpp  FaultGen.def  FaultGen.h  Geometric.cpp  Geometric.h  IMapGen.h  Makefile.am  MapGenerator.def  Plasma1.def  Plasma2.def  Plasma2.dsp  Plasma2.vcxproj  PlasmaGen1.cpp  PlasmaGen1.h  PlasmaGen2.cpp  PlasmaGen2.h  fault.dsp  fault.vcxproj  geometric.dsp  geometric.vcxproj  plasma1.dsp
ctp2_code/net/: net.dsp
ctp2_code/os/: Makefile.am
ctp2_code/robot/: robot.dsp
ctp2_code/robotcom/: civ3log.txt  robotcom.dsp  robotcom.mak
ctp2_code/sound/: Makefile.am  civsound.cpp  civsound.h  ear.h  ear_proc.cpp  ear_util.cpp  ear_util.h  gamesounds.cpp  gamesounds.h  mss.h  soundevent.cpp  soundevent.h  soundmanager.cpp  soundmanager.h  soundutils.cpp  soundutils.h
ctp2_code/ui/: Makefile.am  ui.dsp  ui.vcxproj  ui.vcxproj.filters
(+7352 files in other folders)
